--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +45,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>city_summary</th>\n",
+       "      <th>country</th>\n",
+       "      <th>forest_mountain</th>\n",
+       "      <th>palaces</th>\n",
+       "      <th>island_water</th>\n",
+       "      <th>historical_ww2</th>\n",
+       "      <th>urban</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danube Valley</td>\n",
+       "      <td>The Danube is at its romantic best just west o...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>0.243387</td>\n",
+       "      <td>0.225066</td>\n",
+       "      <td>0.167114</td>\n",
+       "      <td>0.184760</td>\n",
+       "      <td>0.179673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hallstatt</td>\n",
+       "      <td>Lovable Hallstatt is a tiny town bullied onto ...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>0.332949</td>\n",
+       "      <td>0.152195</td>\n",
+       "      <td>0.193703</td>\n",
+       "      <td>0.170388</td>\n",
+       "      <td>0.150766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Salzburg</td>\n",
+       "      <td>Thanks to its charmingly preserved old town, s...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>0.146828</td>\n",
+       "      <td>0.303523</td>\n",
+       "      <td>0.160911</td>\n",
+       "      <td>0.225981</td>\n",
+       "      <td>0.162757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tirol</td>\n",
+       "      <td>Mountainous Tirol — in Austria's western panha...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>0.162069</td>\n",
+       "      <td>0.202707</td>\n",
+       "      <td>0.262229</td>\n",
+       "      <td>0.224609</td>\n",
+       "      <td>0.148387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vienna</td>\n",
+       "      <td>Vienna is the capital of Austria, the cradle o...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>0.122002</td>\n",
+       "      <td>0.493214</td>\n",
+       "      <td>0.108736</td>\n",
+       "      <td>0.138116</td>\n",
+       "      <td>0.137931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Antwerp</td>\n",
+       "      <td>Antwerp (Antwerpen in Dutch, Anvers in French)...</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>0.133086</td>\n",
+       "      <td>0.187118</td>\n",
+       "      <td>0.138653</td>\n",
+       "      <td>0.196728</td>\n",
+       "      <td>0.344415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Bruges</td>\n",
+       "      <td>With pointy gilded architecture, stay-a-while ...</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>0.135723</td>\n",
+       "      <td>0.157849</td>\n",
+       "      <td>0.186628</td>\n",
+       "      <td>0.381943</td>\n",
+       "      <td>0.137857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>Six hundred years ago, Brussels was just a nic...</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>0.153482</td>\n",
+       "      <td>0.120696</td>\n",
+       "      <td>0.428276</td>\n",
+       "      <td>0.167222</td>\n",
+       "      <td>0.130324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Ghent</td>\n",
+       "      <td>Ghent doesn't ooze with cobbles and charm, lik...</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>0.336216</td>\n",
+       "      <td>0.121956</td>\n",
+       "      <td>0.168517</td>\n",
+       "      <td>0.119888</td>\n",
+       "      <td>0.253423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Mostar</td>\n",
+       "      <td>Despite the scars of war, Mostar is still stun...</td>\n",
+       "      <td>Bosnia-Herzegovina</td>\n",
+       "      <td>0.139975</td>\n",
+       "      <td>0.120362</td>\n",
+       "      <td>0.133674</td>\n",
+       "      <td>0.144842</td>\n",
+       "      <td>0.461147</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             city                                       city_summary  \\\n",
+       "0   Danube Valley  The Danube is at its romantic best just west o...   \n",
+       "1       Hallstatt  Lovable Hallstatt is a tiny town bullied onto ...   \n",
+       "2        Salzburg  Thanks to its charmingly preserved old town, s...   \n",
+       "3           Tirol  Mountainous Tirol — in Austria's western panha...   \n",
+       "4          Vienna  Vienna is the capital of Austria, the cradle o...   \n",
+       "5         Antwerp  Antwerp (Antwerpen in Dutch, Anvers in French)...   \n",
+       "12         Bruges  With pointy gilded architecture, stay-a-while ...   \n",
+       "13       Brussels  Six hundred years ago, Brussels was just a nic...   \n",
+       "27          Ghent  Ghent doesn't ooze with cobbles and charm, lik...   \n",
+       "28         Mostar  Despite the scars of war, Mostar is still stun...   \n",
+       "\n",
+       "               country  forest_mountain   palaces  island_water  \\\n",
+       "0              Austria         0.243387  0.225066      0.167114   \n",
+       "1              Austria         0.332949  0.152195      0.193703   \n",
+       "2              Austria         0.146828  0.303523      0.160911   \n",
+       "3              Austria         0.162069  0.202707      0.262229   \n",
+       "4              Austria         0.122002  0.493214      0.108736   \n",
+       "5              Belgium         0.133086  0.187118      0.138653   \n",
+       "12             Belgium         0.135723  0.157849      0.186628   \n",
+       "13             Belgium         0.153482  0.120696      0.428276   \n",
+       "27             Belgium         0.336216  0.121956      0.168517   \n",
+       "28  Bosnia-Herzegovina         0.139975  0.120362      0.133674   \n",
+       "\n",
+       "    historical_ww2     urban  \n",
+       "0         0.184760  0.179673  \n",
+       "1         0.170388  0.150766  \n",
+       "2         0.225981  0.162757  \n",
+       "3         0.224609  0.148387  \n",
+       "4         0.138116  0.137931  \n",
+       "5         0.196728  0.344415  \n",
+       "12        0.381943  0.137857  \n",
+       "13        0.167222  0.130324  \n",
+       "27        0.119888  0.253423  \n",
+       "28        0.144842  0.461147  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities_with_scores = pickle.load(open('data/cities_with_topic_scores.pkl', 'rb'))\n",
     "cities_with_scores.head(10)"
@@ -64,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,24 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NearestNeighbors(algorithm='auto', leaf_size=30, metric='cosine',\n",
+       "NearestNeighbors(algorithm='auto', leaf_size=30, metric='minkowski',\n",
        "                 metric_params=None, n_jobs=None, n_neighbors=50, p=2,\n",
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nearest_neighbor = NearestNeighbors(n_neighbors=50, metric='cosine')\n",
+    "nearest_neighbor = NearestNeighbors(n_neighbors=50, metric='minkowski')\n",
     "nearest_neighbor.fit(topics)"
    ]
   },
@@ -110,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,27 +316,27 @@
      "text": [
       "Rate on a scale of 0-10.\n",
       "    0 is not important and 10 is very important\n",
-      "How important is a forest/mountain setting: 2\n",
+      "How important is a forest/mountain setting: 0\n",
       "How important is visiting palaces/castles: 7\n",
       "How important is a coastal/water setting: 10\n",
-      "How important is historical sites: 8\n",
-      "How important is an urban setting: 1\n",
+      "How important is historical sites: 7\n",
+      "How important is an urban setting: 0\n",
       "\n",
       "\n",
       "For the following locations give:\n",
       "            \t1 if you have visited and liked\n",
       "            \t-1 if you have visited and disliked\n",
       "            \t0 if you have never been\n",
-      "Rate ('Tirol', 'Austria'): 0\n",
-      "Rate ('Alsace', 'France'): 0\n",
-      "Rate ('Black Forest', 'Germany'): 0\n",
-      "Rate ('Nürnberg', 'Germany'): 0\n",
-      "Rate ('Cinque Terre', 'Italy'): 0\n",
-      "Rate ('Camino de Santiago', 'Spain'): 0\n",
-      "Rate ('Warwick & Coventry', 'England'): 0\n",
+      "Rate ('Glastonbury & Wells', 'England'): 0\n",
+      "Rate ('Albi', 'France'): 0\n",
+      "Rate ('Capri', 'Italy'): 0\n",
+      "Rate ('Bruges', 'Belgium'): 0\n",
+      "Rate ('Burgundy', 'France'): 0\n",
+      "Rate ('Dingle Peninsula', 'Ireland'): 0\n",
+      "Rate ('Cologne', 'Germany'): 0\n",
+      "Rate ('Hvar', 'Croatia'): 0\n",
       "Rate ('Chamonix', 'France'): 0\n",
-      "Rate ('Stonehenge & Avebury', 'England'): 0\n",
-      "Rate ('York', 'England'): 0\n"
+      "Rate ('Northern Ireland', 'Ireland'): 0\n"
      ]
     }
    ],
@@ -173,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,11 +361,11 @@
      "output_type": "stream",
      "text": [
       "If interested in visiting enter 1, else 0\n",
-      "('Orvieto', 'Italy'): 1\n",
+      "('Orvieto', 'Italy'): 0\n",
       "('Portrush & the Antrim Coast', 'Ireland'): 1\n",
-      "('Northern Ireland', 'Ireland'): 0\n",
-      "('Kenmare & the Ring of Kerry', 'Ireland'): 0\n",
-      "('Frankfurt', 'Germany'): 1\n"
+      "('Northern Ireland', 'Ireland'): 1\n",
+      "('Connemara & County Mayo', 'Ireland'): 0\n",
+      "('Collioure', 'France'): 1\n"
      ]
     }
    ],
