generate pop-ups for recommendations

--- a/collect_data.ipynb
+++ b/collect_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,9 +934,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>city_summary</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danube Valley</td>\n",
+       "      <td>The Danube is at its romantic best just west o...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hallstatt</td>\n",
+       "      <td>Lovable Hallstatt is a tiny town bullied onto ...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Salzburg</td>\n",
+       "      <td>Thanks to its charmingly preserved old town, s...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tirol</td>\n",
+       "      <td>Mountainous Tirol — in Austria's western panha...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vienna</td>\n",
+       "      <td>Vienna is the capital of Austria, the cradle o...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            city                                       city_summary  country\n",
+       "0  Danube Valley  The Danube is at its romantic best just west o...  Austria\n",
+       "1      Hallstatt  Lovable Hallstatt is a tiny town bullied onto ...  Austria\n",
+       "2       Salzburg  Thanks to its charmingly preserved old town, s...  Austria\n",
+       "3          Tirol  Mountainous Tirol — in Austria's western panha...  Austria\n",
+       "4         Vienna  Vienna is the capital of Austria, the cradle o...  Austria"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#pickle.dump(city_df, open('data/cities.pkl', 'wb'))\n",
     "city_df = pickle.load(open('data/cities.pkl', 'rb'))"
