--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,11 +114,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>city_summary</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danube Valley</td>\n",
+       "      <td>The Danube is at its romantic best just west o...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hallstatt</td>\n",
+       "      <td>Lovable Hallstatt is a tiny town bullied onto ...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Salzburg</td>\n",
+       "      <td>Thanks to its charmingly preserved old town, s...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tirol</td>\n",
+       "      <td>Mountainous Tirol — in Austria's western panha...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vienna</td>\n",
+       "      <td>Vienna is the capital of Austria, the cradle o...</td>\n",
+       "      <td>Austria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            city                                       city_summary  country\n",
+       "0  Danube Valley  The Danube is at its romantic best just west o...  Austria\n",
+       "1      Hallstatt  Lovable Hallstatt is a tiny town bullied onto ...  Austria\n",
+       "2       Salzburg  Thanks to its charmingly preserved old town, s...  Austria\n",
+       "3          Tirol  Mountainous Tirol — in Austria's western panha...  Austria\n",
+       "4         Vienna  Vienna is the capital of Austria, the cradle o...  Austria"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#cities_df = pickle.load(open('data/cities.pkl', 'rb'))\n",
+    "# cities_df = pickle.load(open('data/cities.pkl', 'rb'))\n",
     "# cities_df.head()"
    ]
   },
@@ -1508,12 +1583,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#pickle.dump(combined_descriptions_df, open('data/combined_cities.pkl', 'wb'))\n",
     "combined_descriptions_df = pickle.load(open('data/combined_cities.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>city_summary</th>\n",
+       "      <th>country</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danube Valley</td>\n",
+       "      <td>The Danube is at its romantic best just west o...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Melk (older spelling: Mölk; Central Bavarian: ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hallstatt</td>\n",
+       "      <td>Lovable Hallstatt is a tiny town bullied onto ...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Hallstatt (German: [ˈhalʃtat]; Central Bavaria...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Salzburg</td>\n",
+       "      <td>Thanks to its charmingly preserved old town, s...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Salzburg (German: [ˈzaltsbʊɐ̯k] (listen);[note...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tirol</td>\n",
+       "      <td>Mountainous Tirol — in Austria's western panha...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>\\nTyrol (/tɪˈroʊl, taɪ-, ˈtaɪroʊl/;[1] histori...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vienna</td>\n",
+       "      <td>Vienna is the capital of Austria, the cradle o...</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>\\nVienna (/viˈɛnə/ (listen);[11][12] German: W...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            city                                       city_summary  country  \\\n",
+       "0  Danube Valley  The Danube is at its romantic best just west o...  Austria   \n",
+       "1      Hallstatt  Lovable Hallstatt is a tiny town bullied onto ...  Austria   \n",
+       "2       Salzburg  Thanks to its charmingly preserved old town, s...  Austria   \n",
+       "3          Tirol  Mountainous Tirol — in Austria's western panha...  Austria   \n",
+       "4         Vienna  Vienna is the capital of Austria, the cradle o...  Austria   \n",
+       "\n",
+       "                                                text  \n",
+       "0  Melk (older spelling: Mölk; Central Bavarian: ...  \n",
+       "1  Hallstatt (German: [ˈhalʃtat]; Central Bavaria...  \n",
+       "2  Salzburg (German: [ˈzaltsbʊɐ̯k] (listen);[note...  \n",
+       "3  \\nTyrol (/tɪˈroʊl, taɪ-, ˈtaɪroʊl/;[1] histori...  \n",
+       "4  \\nVienna (/viˈɛnə/ (listen);[11][12] German: W...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_descriptions_df.head()"
    ]
   },
   {
