rescrape to add city_urls to city data frame

--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import pandas as pd\n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "from recommend import make_recommendations, rate_recs"
+    "from travel_destination_recommendation.recommend import make_recommendations, rate_recs"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,6 +71,7 @@
        "      <th></th>\n",
        "      <th>city</th>\n",
        "      <th>city_summary</th>\n",
+       "      <th>city_url</th>\n",
        "      <th>country</th>\n",
        "      <th>forest_mountain</th>\n",
        "      <th>palaces</th>\n",
@@ -84,155 +85,165 @@
        "      <th>0</th>\n",
        "      <td>Danube Valley</td>\n",
        "      <td>The Danube is at its romantic best just west o...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/austria/danu...</td>\n",
        "      <td>Austria</td>\n",
-       "      <td>0.243387</td>\n",
-       "      <td>0.225066</td>\n",
-       "      <td>0.167114</td>\n",
-       "      <td>0.184760</td>\n",
-       "      <td>0.179673</td>\n",
+       "      <td>0.217851</td>\n",
+       "      <td>0.193999</td>\n",
+       "      <td>0.196622</td>\n",
+       "      <td>0.186767</td>\n",
+       "      <td>0.204762</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Hallstatt</td>\n",
        "      <td>Lovable Hallstatt is a tiny town bullied onto ...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/austria/hall...</td>\n",
        "      <td>Austria</td>\n",
-       "      <td>0.332949</td>\n",
-       "      <td>0.152195</td>\n",
-       "      <td>0.193703</td>\n",
-       "      <td>0.170388</td>\n",
-       "      <td>0.150766</td>\n",
+       "      <td>0.215644</td>\n",
+       "      <td>0.191211</td>\n",
+       "      <td>0.195105</td>\n",
+       "      <td>0.207592</td>\n",
+       "      <td>0.190449</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Salzburg</td>\n",
        "      <td>Thanks to its charmingly preserved old town, s...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/austria/salz...</td>\n",
        "      <td>Austria</td>\n",
-       "      <td>0.146828</td>\n",
-       "      <td>0.303523</td>\n",
-       "      <td>0.160911</td>\n",
-       "      <td>0.225981</td>\n",
-       "      <td>0.162757</td>\n",
+       "      <td>0.215227</td>\n",
+       "      <td>0.192130</td>\n",
+       "      <td>0.208308</td>\n",
+       "      <td>0.194362</td>\n",
+       "      <td>0.189973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Tirol</td>\n",
        "      <td>Mountainous Tirol — in Austria's western panha...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/austria/tirol</td>\n",
        "      <td>Austria</td>\n",
-       "      <td>0.162069</td>\n",
-       "      <td>0.202707</td>\n",
-       "      <td>0.262229</td>\n",
-       "      <td>0.224609</td>\n",
-       "      <td>0.148387</td>\n",
+       "      <td>0.196819</td>\n",
+       "      <td>0.203917</td>\n",
+       "      <td>0.212732</td>\n",
+       "      <td>0.223861</td>\n",
+       "      <td>0.162672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Vienna</td>\n",
        "      <td>Vienna is the capital of Austria, the cradle o...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/austria/vienna</td>\n",
        "      <td>Austria</td>\n",
-       "      <td>0.122002</td>\n",
-       "      <td>0.493214</td>\n",
-       "      <td>0.108736</td>\n",
-       "      <td>0.138116</td>\n",
-       "      <td>0.137931</td>\n",
+       "      <td>0.200953</td>\n",
+       "      <td>0.205604</td>\n",
+       "      <td>0.209454</td>\n",
+       "      <td>0.225827</td>\n",
+       "      <td>0.158162</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Antwerp</td>\n",
        "      <td>Antwerp (Antwerpen in Dutch, Anvers in French)...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/belgium/antwerp</td>\n",
        "      <td>Belgium</td>\n",
-       "      <td>0.133086</td>\n",
-       "      <td>0.187118</td>\n",
-       "      <td>0.138653</td>\n",
-       "      <td>0.196728</td>\n",
-       "      <td>0.344415</td>\n",
+       "      <td>0.222889</td>\n",
+       "      <td>0.208160</td>\n",
+       "      <td>0.206248</td>\n",
+       "      <td>0.199187</td>\n",
+       "      <td>0.163516</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>6</th>\n",
        "      <td>Bruges</td>\n",
        "      <td>With pointy gilded architecture, stay-a-while ...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/belgium/bruges</td>\n",
        "      <td>Belgium</td>\n",
-       "      <td>0.135723</td>\n",
-       "      <td>0.157849</td>\n",
-       "      <td>0.186628</td>\n",
-       "      <td>0.381943</td>\n",
-       "      <td>0.137857</td>\n",
+       "      <td>0.186662</td>\n",
+       "      <td>0.196401</td>\n",
+       "      <td>0.200745</td>\n",
+       "      <td>0.223841</td>\n",
+       "      <td>0.192350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>7</th>\n",
        "      <td>Brussels</td>\n",
        "      <td>Six hundred years ago, Brussels was just a nic...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/belgium/brus...</td>\n",
        "      <td>Belgium</td>\n",
-       "      <td>0.153482</td>\n",
-       "      <td>0.120696</td>\n",
-       "      <td>0.428276</td>\n",
-       "      <td>0.167222</td>\n",
-       "      <td>0.130324</td>\n",
+       "      <td>0.200143</td>\n",
+       "      <td>0.217760</td>\n",
+       "      <td>0.197729</td>\n",
+       "      <td>0.211140</td>\n",
+       "      <td>0.173228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>8</th>\n",
        "      <td>Ghent</td>\n",
        "      <td>Ghent doesn't ooze with cobbles and charm, lik...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/belgium/ghent</td>\n",
        "      <td>Belgium</td>\n",
-       "      <td>0.336216</td>\n",
-       "      <td>0.121956</td>\n",
-       "      <td>0.168517</td>\n",
-       "      <td>0.119888</td>\n",
-       "      <td>0.253423</td>\n",
+       "      <td>0.167311</td>\n",
+       "      <td>0.258152</td>\n",
+       "      <td>0.189665</td>\n",
+       "      <td>0.191732</td>\n",
+       "      <td>0.193139</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
+       "      <th>9</th>\n",
        "      <td>Mostar</td>\n",
        "      <td>Despite the scars of war, Mostar is still stun...</td>\n",
+       "      <td>https://www.ricksteves.com/europe/bosnia-herze...</td>\n",
        "      <td>Bosnia-Herzegovina</td>\n",
-       "      <td>0.139975</td>\n",
-       "      <td>0.120362</td>\n",
-       "      <td>0.133674</td>\n",
-       "      <td>0.144842</td>\n",
-       "      <td>0.461147</td>\n",
+       "      <td>0.170985</td>\n",
+       "      <td>0.239295</td>\n",
+       "      <td>0.197913</td>\n",
+       "      <td>0.193964</td>\n",
+       "      <td>0.197843</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             city                                       city_summary  \\\n",
-       "0   Danube Valley  The Danube is at its romantic best just west o...   \n",
-       "1       Hallstatt  Lovable Hallstatt is a tiny town bullied onto ...   \n",
-       "2        Salzburg  Thanks to its charmingly preserved old town, s...   \n",
-       "3           Tirol  Mountainous Tirol — in Austria's western panha...   \n",
-       "4          Vienna  Vienna is the capital of Austria, the cradle o...   \n",
-       "5         Antwerp  Antwerp (Antwerpen in Dutch, Anvers in French)...   \n",
-       "12         Bruges  With pointy gilded architecture, stay-a-while ...   \n",
-       "13       Brussels  Six hundred years ago, Brussels was just a nic...   \n",
-       "27          Ghent  Ghent doesn't ooze with cobbles and charm, lik...   \n",
-       "28         Mostar  Despite the scars of war, Mostar is still stun...   \n",
+       "            city                                       city_summary  \\\n",
+       "0  Danube Valley  The Danube is at its romantic best just west o...   \n",
+       "1      Hallstatt  Lovable Hallstatt is a tiny town bullied onto ...   \n",
+       "2       Salzburg  Thanks to its charmingly preserved old town, s...   \n",
+       "3          Tirol  Mountainous Tirol — in Austria's western panha...   \n",
+       "4         Vienna  Vienna is the capital of Austria, the cradle o...   \n",
+       "5        Antwerp  Antwerp (Antwerpen in Dutch, Anvers in French)...   \n",
+       "6         Bruges  With pointy gilded architecture, stay-a-while ...   \n",
+       "7       Brussels  Six hundred years ago, Brussels was just a nic...   \n",
+       "8          Ghent  Ghent doesn't ooze with cobbles and charm, lik...   \n",
+       "9         Mostar  Despite the scars of war, Mostar is still stun...   \n",
        "\n",
-       "               country  forest_mountain   palaces  island_water  \\\n",
-       "0              Austria         0.243387  0.225066      0.167114   \n",
-       "1              Austria         0.332949  0.152195      0.193703   \n",
-       "2              Austria         0.146828  0.303523      0.160911   \n",
-       "3              Austria         0.162069  0.202707      0.262229   \n",
-       "4              Austria         0.122002  0.493214      0.108736   \n",
-       "5              Belgium         0.133086  0.187118      0.138653   \n",
-       "12             Belgium         0.135723  0.157849      0.186628   \n",
-       "13             Belgium         0.153482  0.120696      0.428276   \n",
-       "27             Belgium         0.336216  0.121956      0.168517   \n",
-       "28  Bosnia-Herzegovina         0.139975  0.120362      0.133674   \n",
+       "                                            city_url             country  \\\n",
+       "0  https://www.ricksteves.com/europe/austria/danu...             Austria   \n",
+       "1  https://www.ricksteves.com/europe/austria/hall...             Austria   \n",
+       "2  https://www.ricksteves.com/europe/austria/salz...             Austria   \n",
+       "3    https://www.ricksteves.com/europe/austria/tirol             Austria   \n",
+       "4   https://www.ricksteves.com/europe/austria/vienna             Austria   \n",
+       "5  https://www.ricksteves.com/europe/belgium/antwerp             Belgium   \n",
+       "6   https://www.ricksteves.com/europe/belgium/bruges             Belgium   \n",
+       "7  https://www.ricksteves.com/europe/belgium/brus...             Belgium   \n",
+       "8    https://www.ricksteves.com/europe/belgium/ghent             Belgium   \n",
+       "9  https://www.ricksteves.com/europe/bosnia-herze...  Bosnia-Herzegovina   \n",
        "\n",
-       "    historical_ww2     urban  \n",
-       "0         0.184760  0.179673  \n",
-       "1         0.170388  0.150766  \n",
-       "2         0.225981  0.162757  \n",
-       "3         0.224609  0.148387  \n",
-       "4         0.138116  0.137931  \n",
-       "5         0.196728  0.344415  \n",
-       "12        0.381943  0.137857  \n",
-       "13        0.167222  0.130324  \n",
-       "27        0.119888  0.253423  \n",
-       "28        0.144842  0.461147  "
+       "   forest_mountain   palaces  island_water  historical_ww2     urban  \n",
+       "0         0.217851  0.193999      0.196622        0.186767  0.204762  \n",
+       "1         0.215644  0.191211      0.195105        0.207592  0.190449  \n",
+       "2         0.215227  0.192130      0.208308        0.194362  0.189973  \n",
+       "3         0.196819  0.203917      0.212732        0.223861  0.162672  \n",
+       "4         0.200953  0.205604      0.209454        0.225827  0.158162  \n",
+       "5         0.222889  0.208160      0.206248        0.199187  0.163516  \n",
+       "6         0.186662  0.196401      0.200745        0.223841  0.192350  \n",
+       "7         0.200143  0.217760      0.197729        0.211140  0.173228  \n",
+       "8         0.167311  0.258152      0.189665        0.191732  0.193139  \n",
+       "9         0.170985  0.239295      0.197913        0.193964  0.197843  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,11 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "topics = cities_with_scores.drop(['city', 'city_summary', 'country'], axis=1)"
+    "topics = cities_with_scores.drop(['city', 'city_summary', 'country', 'city_url'], axis=1)"
    ]
   },
   {
@@ -260,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +282,7 @@
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,27 +327,27 @@
      "text": [
       "Rate on a scale of 0-10.\n",
       "    0 is not important and 10 is very important\n",
-      "How important is a forest/mountain setting: 0\n",
+      "How important is a forest/mountain setting: 8\n",
       "How important is visiting palaces/castles: 7\n",
-      "How important is a coastal/water setting: 10\n",
-      "How important is historical sites: 7\n",
-      "How important is an urban setting: 0\n",
+      "How important is a coastal/water setting: 2\n",
+      "How important is historical sites: 9\n",
+      "How important is an urban setting: 1\n",
       "\n",
       "\n",
       "For the following locations give:\n",
       "            \t1 if you have visited and liked\n",
       "            \t-1 if you have visited and disliked\n",
       "            \t0 if you have never been\n",
-      "Rate ('Glastonbury & Wells', 'England'): 0\n",
-      "Rate ('Albi', 'France'): 0\n",
-      "Rate ('Capri', 'Italy'): 0\n",
-      "Rate ('Bruges', 'Belgium'): 0\n",
-      "Rate ('Burgundy', 'France'): 0\n",
-      "Rate ('Dingle Peninsula', 'Ireland'): 0\n",
-      "Rate ('Cologne', 'Germany'): 0\n",
-      "Rate ('Hvar', 'Croatia'): 0\n",
-      "Rate ('Chamonix', 'France'): 0\n",
-      "Rate ('Northern Ireland', 'Ireland'): 0\n"
+      "Rate ('Óbidos', 'Portugal'): 0\n",
+      "Rate ('Munich', 'Germany'): 0\n",
+      "Rate ('Pisa', 'Italy'): 0\n",
+      "Rate ('Isle of Skye', 'Scotland'): 0\n",
+      "Rate ('Sarlat-la-Canéda', 'France'): 0\n",
+      "Rate ('Rouen', 'France'): 0\n",
+      "Rate ('Sorrento', 'Italy'): 0\n",
+      "Rate ('Porto', 'Portugal'): 0\n",
+      "Rate ('Colmar', 'France'): 0\n",
+      "Rate ('Tallinn', 'Estonia'): 0\n"
      ]
     }
    ],
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -361,11 +372,11 @@
      "output_type": "stream",
      "text": [
       "If interested in visiting enter 1, else 0\n",
-      "('Orvieto', 'Italy'): 0\n",
-      "('Portrush & the Antrim Coast', 'Ireland'): 1\n",
-      "('Northern Ireland', 'Ireland'): 1\n",
-      "('Connemara & County Mayo', 'Ireland'): 0\n",
-      "('Collioure', 'France'): 1\n"
+      "('Honfleur', 'France'): 0\n",
+      "('Cotswolds', 'England'): 0\n",
+      "('Albi', 'France'): 0\n",
+      "('Tallinn', 'Estonia'): 0\n",
+      "('Sintra', 'Portugal'): 0\n"
      ]
     }
    ],
